Viewport glitches when using Metal backend #109389
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#109389
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-13.4.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Pro Apple 4.1 Metal - 83.1
Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash:
e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)
Short description of error
Using the Metal backend on macOS (at least on an M1 Air and M1 Pro machine, all I have access to) causes visual glitches in the viewport. Most notably issues in the texture paint view when enabling Paint Mask where the mask itself is full of glitching noise. There was also one instance where trying to texture paint caused the entire system to crash.
Another issue is with bone visibility while in pose mode and bones set to "Stick", there's a thick outline that prevents the actual colors of the bones so you can see if they're affect by a constraint.
Exact steps for others to reproduce the error
For the bone issue: Simply go into pose mode with an armature at set the viewport display to stick. The outline of the bone will be too thick to see the color indicators. (same as #108575)
For the mask issue: simply enter texture paint mode and enable paint mask and deselect everything, the resulting mask with be garbled.
Both of these issues only occur with the Metal backend, switching to OpenGL and restarting Blender has the expected behavior. In addition, these issues for me were instantly reproducible on both the 3.6 and 4.0 builds as well.
Attached video shows OpenGL behavior vs Metal. I didn't include a blend file because just the default cube when loading up will showcase these issues.
hi, thanks for the report. Drawing artifacts are possibly related with: #105830
re: bone outline, we've been notified about this issue, but it seems Richard observed same problem with OpenGL backend: #108575 / #108620
Could you check again in 3.6 build whether artifacts are fixed?: https://builder.blender.org/download/daily/
Hey Pratik,
Still not having these issues on my end with OpenGL, just when using Metal. Tried both the x86 and ARM build just to be sure.
That being said, Richard is on an Intel machine since he's citing a 5700XT. Possibly there may be a difference here between Apple Silicon and Intel causing the discrepancy. I don't have an Intel Mac so I can't test that any further though.
Thanks. And any updates on "drawing artifacts in texture paint" (did you verify it in 3.6 release)?
I'll inform apple devs about #108575
Still have both issues on 3.6 release. If you need anything more specific just let me know and I’ll do what I can.
@Michael-Parkin-White-Apple hi, can you check?
Thanks for the report, I'll take a look into this. Likely a depth precision issue. In some cases, overlays have required a different depth bias for Apple Silicon platforms due to differences in HW depth calculations. Likely a similar fix to the previous one for the retopology overlay display.